<resources>
    <string name="app_name">MyVoIP</string>
    <string name="Contacts">CONTACTS</string>
    <string name="numberdisplay"></string>
    <string name="Call">CALL</string>

    <string name="Setting">SETTINGS</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="numstar">*</string>
    <string name="num0">0</string>
    <string name="numhash">#</string>
    <string name="title_activity_settings">Sip Account Settings</string>

    <!-- Strings related to login -->
    <string name="display_name">Display name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="authorization_user_name">Authorization User Name</string>
    <string name="domain">Domain</string>
    <string name="sip_account_setting">Sip Accounts Settings</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_setting_layout">setting_layout</string>


</resources>
