<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/button17"
        android:layout_alignParentStart="true"
        android:text="@string/numberdisplay" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="60dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="7dp"
        android:layout_marginStart="7dp"
        android:text="@string/Contacts" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/button4"
        android:layout_centerHorizontal="true"
        android:text="@string/Call" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button7"
        android:text="@string/Setting" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginBottom="20dp"
        android:text="@string/numstar" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:text="@string/num7" />

    <Button
        android:id="@+id/button10"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:text="@string/num4" />

    <Button
        android:id="@+id/button11"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button13"
        android:layout_alignStart="@+id/button13"
        android:text="@string/num5" />

    <Button
        android:id="@+id/button12"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button14"
        android:layout_alignParentEnd="true"
        android:text="@string/num6" />

    <Button
        android:id="@+id/button13"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button16"
        android:layout_alignStart="@+id/button16"
        android:text="@string/num8" />

    <Button
        android:id="@+id/button14"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button15"
        android:layout_alignParentEnd="true"
        android:text="@string/num9" />

    <Button
        android:id="@+id/button15"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button9"
        android:text="@string/numhash" />

    <Button
        android:id="@+id/button16"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button9"
        android:text="@string/num0" />

    <Button
        android:id="@+id/button17"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button10"
        android:layout_alignStart="@+id/button10"
        android:text="@string/num1" />

    <Button
        android:id="@+id/button18"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button11"
        android:layout_alignStart="@+id/button11"
        android:text="@string/num2" />

    <Button
        android:id="@+id/button19"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button12"
        android:layout_alignParentEnd="true"
        android:text="@string/num3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button17"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/titlescreen"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible" />

</RelativeLayout>